# plover_grandjean

./: .gitignore  README.md  setup.cfg
plover_grandjean/: system.py
plover_grandjean/dictionaries/: grandjean_user.json
