[metadata]
name = plover_grandjean
version = 0.0.1
description = French system for Plover
author = Maxime Bouteau
author_email = bouteau.maxime@gmail.com
license = GNU General Public License v2 or later (GPLv2+)

classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev1
include_package_data = True
packages =
	plover_grandjean

[options.entry_points]
plover.system =
  Grandjean = plover_grandjean.system
